Fix a bug where open in doesn't show loading view

It seems like with the switch to the new tab grid, this feature stopped
to function properly. it used to use the rootview controller to present
dialogs & views. using the base view for now to present the loading
screen as a quick fix. The whole class should be refactored in the future
to get a base view controller instead.

Bug: 892839
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I4eea25b3d3c5c329dd54865de1fbae68e05304e1
Reviewed-on: https://chromium-review.googlesource.com/c/1266205
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Mohammad Refaat <mrefaat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597515}
Former-commit-id: cd960d5ad293a140aeb3275f3b41606a0c7fdb4e